--- a/poja.yml
+++ b/poja.yml
@@ -5,11 +5,11 @@ custom_java_env_vars: poja-custom-java-env-vars.txt
 jacoco-min-coverage: '0.8'
 package_full_name: com.poja.project
 region: eu-west-3
-ssm_sg_id: null
-ssm_subnet1_id: null
-ssm_subnet2_id: null
+ssm_sg_id: /poja-pro/sg/id
+ssm_subnet1_id: /poja-pro/subnet/private1/id
+ssm_subnet2_id: /poja-pro/subnet/private2/id
 ts_client_api_url_env_var_name: ''
 ts_client_default_openapi_server_url: ''
 with_gen_clients: 'false'
-with_own_vpc: 'false'
+with_own_vpc: 'true'
 with_postgres: 'true'
