--- a/template.yml
+++ b/template.yml
@@ -14,7 +14,12 @@ Globals:
     AutoPublishAlias: live
     SnapStart:
       ApplyOn: PublishedVersions
-    
+    VpcConfig:
+      SecurityGroupIds:
+        - !Sub '{{resolve:ssm:/poja-pro/sg/id}}'
+      SubnetIds:
+        - !Sub '{{resolve:ssm:/poja-pro/subnet/private1/id}}'
+        - !Sub '{{resolve:ssm:/poja-pro/subnet/private2/id}}'
     Environment:
       Variables:
         ENV: !Ref Env
